Projects/nginx/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: nginx-service
  namespace: nginx
spec:
  selector:
    app: nginx
  type: NodePort       # Type of service, can be ClusterIP, NodePort, LoadBalancer, etc.
  ports:
    - protocol: TCP
      port: 80         # Port on the service for external access
      targetPort: 80   # Port on the container
      nodePort: 30080  # <-- External port (must be between 30000–32767)
